--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./main.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&family=Russo+One&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="mainpage">
@@ -26,6 +30,21 @@
       </div>
     </div>
     <div class="directions">
+      <div class="buttoncontainer">
+        <div class="imageb"></div>
+        <div class="buttonwrapper">
+          <div class="buttoncol">
+            <button class="buttond">
+              <h1>О нас</h1>
+            </button>
+          </div>
+          <div class="buttoncol">
+            <button class="buttond1">
+              <h1>Связь с нами</h1>
+            </button>
+          </div>
+        </div>
+      </div>
       <div class="container">
         <div class="col">
           <div class="card">
@@ -122,6 +141,51 @@
         </div>
       </div>
     </div>
+    <div class="aboutus">
+      <div class="container3">
+        <h1>О нас</h1>
+        <p>
+          Наша философия в путешествиях — получение максимального удовольствия
+          за счет посещения большого количества необычных мест. Мы предлагаем
+          выбор трипов на любой вкус - от поездки выходного дня в Карелию до
+          недельного отрыва в Крыму.
+        </p>
+      </div>
+      <div class="container4">
+        <div class="wrapper">
+          <div class="col3">
+            <div class="aboutcard">
+              <img src="./img/dr/random_image.png" alt="" />
+              <h2>Павел</h2>
+              <p>
+                Посетил 18 стран, мечтает переехать в Сочи, но пасмурный Питер
+                не отпускает. Уговорит тебя на любую авантюру!
+              </p>
+            </div>
+          </div>
+          <div class="col3">
+            <div class="aboutcard">
+              <img src="./img/dr/random_image.png" alt="" />
+              <h2>Павел</h2>
+              <p>
+                Посетил 18 стран, мечтает переехать в Сочи, но пасмурный Питер
+                не отпускает. Уговорит тебя на любую авантюру!
+              </p>
+            </div>
+          </div>
+          <div class="col3">
+            <div class="aboutcard">
+              <img src="./img/dr/random_image.png" alt="" />
+              <h2>Павел</h2>
+              <p>
+                Посетил 18 стран, мечтает переехать в Сочи, но пасмурный Питер
+                не отпускает. Уговорит тебя на любую авантюру!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="formpage">
       <div class="container2">
         <h1>
@@ -153,8 +217,7 @@
         </div>
       </div>
     </div>
-    <footer>
-      <button class="insta"></button>
-    </footer>
+    <div class="footer"><button class="insta"></button></div>
+    <script src="./main.js"></script>
   </body>
 </html>
