--- a/index.html
+++ b/index.html
@@ -217,7 +217,9 @@
         </div>
       </div>
     </div>
-    <div class="footer"><button class="insta"></button></div>
+    <div class="footer">
+      <button class="insta" onClick='location.href="https://www.instagram.com/soallgood_trips/"'></button>
+    </div>
     <script src="./main.js"></script>
   </body>
 </html>
